--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Disable HTML Entity to Unicode conversion in Markdown-it",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,10 @@
   "bugs": {
     "url": "https://github.com/Manvel/markdown-it-html-entities/issues"
   },
-  "homepage": "https://github.com/Manvel/markdown-it-html-entities#readme"
+  "homepage": "https://github.com/Manvel/markdown-it-html-entities#readme",
+  "devDependencies": {
+    "markdown-it": "^8.4.2",
+    "mocha": "^5.2.0"
+  },
+  "dependencies": {}
 }
